# umbr

./: .gitignore  LICENSE  README.md  pyproject.toml  umbr.py
.github/workflows/: verify.yml
docs/: STATISTICAL_FINDINGS.md
tests/: verification_harness.py
